[workspace]
resolver = "2" # Use the 2021 edition resolver

members = [
    "programs/*"
]

[profile.dev]
opt-level = 0

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


# Add the custom profile for IDL generation
[profile.idl-gen]
inherits = "dev"
opt-level = 0