[package]
name = "ryujin-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ryujin_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "=0.30.1"
switchboard-on-demand = "0.1.14"
anchor-lang-idl = { version = "0.1.1", features = ["convert"] }
