[package]
name = "ryujin-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ryujin_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
orao-solana-vrf = { version = "0.4.0", default-features = false, features = ["cpi"] }


# Add a new profile specifically for IDL generation
[profile.dev]
anchor-lang = "0.30.0" # or the latest version
anchor-spl = "0.30.0"  # or the latest version